[package]
name = "luhn"
version = "1.0.0"
description = "A Luhn validation library"
authors = [
  "Jeff Carpenter <gcarpenterv@gmail.com>",
  "Alex Sayers <alex@asayers.com>",
]
license = "MIT"
edition = "2018"
repository = "https://github.com/jeffcarp/luhn-rs"
readme = "README.md"

[dependencies]
digits_iterator = "0.1"
