[package]
name = "luhn"
version = "1.0.2"
description = "A Luhn validation library"
authors = [
  "Jeff Carpenter <gcarpenterv@gmail.com>",
  "Alex Sayers <alex@asayers.com>",
  "<manpacket@gmail.com>",
]
license = "MIT"
edition = "2018"
repository = "https://github.com/jeffcarp/luhn-rs"
readme = "README.md"

[dependencies]
