[package]
name = "luhn"
version = "1.0.1"
description = "A Luhn validation library"
authors = [
  "Jeff Carpenter <gcarpenterv@gmail.com>",
  "Alex Sayers <alex@asayers.com>",
]
license = "MIT"
edition = "2018"
repository = "https://github.com/jeffcarp/luhn-rs"
readme = "README.md"

[dependencies]
luhn3 = "1.0"
